fix margin spacing above citation h3. #5855

--- a/openscholar/themes/os_basetheme/css/global.biblio.css
+++ b/openscholar/themes/os_basetheme/css/global.biblio.css
@@ -336,7 +336,9 @@ body.node-type-biblio .biblio-export {
   margin-bottom:8px;
   }
   
-
+ #citation-wrapper h3{
+  margin-top:0;
+  }
 
 dd.biblio-citation {
   margin-bottom: 0;
